syntax = "proto3";

import "adaptation.proto";
import "data.proto";
import "output.proto";
import "test_config.proto";
import "hack_config.proto";

message TrainAdaptationConfig {
  string init_model = 1;
  string discriminator_pretrained = 2;
  Discriminator discriminator = 3;
  AdaptationLearning learning_config = 4;
  AdaptationCorpus corpus = 5;
  uint32 gpu = 6;
  int64 seed = 7;
  DataConfig data_config = 8;
  string init_seqgan_model = 9;
  string model_out = 10;
  DataConfig mrt_data_config = 11;
  AdaptationOutputConfig output_config = 12;
  TestConfig test_config = 13;
  HackConfig hack_config = 14;
  bool pretest = 15;
}

message AdaptationOutputConfig {
  TrainOutput train = 2;
  TestOutput test = 1;
}
